--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^3.0.3",
+    "randomcolor": "^0.6.2",
     "socket.io": "^4.7.4"
   }
 }
